# crypto-market

./: .env-example  .gitignore  Makefile  README.md  default.conf  docker-compose.yaml
auth/: go.mod  go.sum
auth/api/swagger/: auth.yaml
auth/internal/restapi/: configure_market_auth.go  doc.go  embedded_spec.go  server.go
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/api/: authService.js  marketService.js  matchingEngineService.js
frontend/src/components/: AuthRoute.js  MarketChart.js  PublicRoute.js
keycloak/config/: realm-export.json
main/: Dockerfile  go.mod  go.sum
main/api/swagger/: main.yaml
main/cmd/: main.go
main/internal/implementation/: blockchain_client.go  cancel_bid.go  create_bid.go  deposit.go  (+7 more)
matching_engine/: Dockerfile  main.cpp
matching_engine/internal/pkg/transport/: CMakeLists.txt
matching_engine/internal/pkg/transport/api/rest/: mappers.hpp  server.hpp
matching_engine/internal/pkg/transport/client/: backend_client.cpp  backend_client.hpp
matching_engine/internal/pkg/transport/order_updates_sender/: order_updates_sender.cpp
nginx/conf.d/: default.conf
payment/: Dockerfile  go.mod
payment/cmd/: main.go
pkg/: go.mod  go.sum
pkg/client/: check_token_method.go  client.go
scripts/: generate_from_swagger.sh
scripts/init_sql/: init_connector.sql  init_main.sql
stack_connector/: Dockerfile  go.mod  go.sum
stack_connector/cmd/: main.go
stack_connector/models/: bid.go
stack_connector/restapi/: configure_market.go  embedded_spec.go  server.go
vhost.d/: 213.171.24.206
(+122 files in other folders)
